# forge

./: .gitignore  Cargo.toml  Cargo_old.toml  README.md  build_errors.txt  build_output.txt  linker.ld  rust-toolchain.toml  x86_64-redstone.json
.cargo/: config.toml
doc/: ARCH.md  ARQUITETURA.md  BUILD.md  CONTRIBUTING.md  CORE.md  DRIVERS.md  FILESYSTEM.md  FS.md  IPC.md  KLIB.md  LOG_MIGRATION_GUIDE.md  MEMORIA.md  MM.md  MODULE.md  PROCESSOS.md  Plano de refatoração.md  SCHED.md  SECURITY.md  SYNC.md  SYS.md  SYSCALL.md  SYSCALLS.md  implementation_plan.md  index.md
src/: lib.rs  main.rs  main_helpers.rs  panic.rs
src/arch/: guia.md  mod.rs  test.rs
src/arch/_traits/: cpu.rs  mod.rs
src/arch/aarch64/: mod.rs
src/arch/riscv64/: mod.rs
src/arch/test/: mod.rs  test.rs
src/arch/traits/: cpu.rs  mod.rs
src/arch/x86_64/: cpu.rs  gdt.rs  idt.rs  interrupts.rs  interrupts.s  (+6 more)
src/core/: elf.rs  entry.rs  gfx_test.rs  guia.md  handle.rs  handoff.rs  logging.rs  mod.rs  panic.rs  process.rs  scheduler.rs  test.rs
src/drivers/: console.rs  guia.md  input_buffer.rs  keyboard.rs  mod.rs  pic.rs  platform.rs  serial.rs  test.rs  timer.rs
src/fs/: devfs.rs  guia.md  initramfs.rs  mod.rs  test.rs  vfs.rs
src/hal/: common.rs  mod.rs  platform.rs
src/ipc/: futex.rs  guia.md  manager.rs  mod.rs  pipe.rs  port.rs  shm.rs  signal.rs  test.rs  unix_socket.rs
src/klib/: align.rs  bitflags.rs  bitmap.rs  guia.md  mem_funcs.rs  mod.rs  test.rs  test_framework.rs
src/lib/: collections.rs  mod.rs  util.rs
src/mm/: README.md  config.rs  early.rs  error.rs  fault.rs  guia.md  heap.rs  hhdm.rs  mod.rs  oom.rs  pmm.rs  stats.rs  test.rs  trace.rs  vmm.rs
src/module/: abi.rs  capability.rs  guia.md  loader.rs  mod.rs  sandbox.rs  supervisor.rs  test.rs  verifier.rs  watchdog.rs
src/net/: core.rs  link.rs  mod.rs  network.rs  socket.rs  transport.rs
src/sched/: config.rs  context.rs  guia.md  mod.rs  scheduler.rs  task.rs  test.rs
src/security/: audit.rs  capability.rs  dac.rs  guia.md  mod.rs  test.rs
src/sync/: guia.md  mod.rs  test.rs
src/sys/: elf.rs  error.rs  guia.md  mod.rs  syscall.rs  test.rs  types.rs
src/syscall/: abi.rs  dispatch.rs  dispatcher.rs  error.rs  fs.rs  guia.md  handle.rs  io.rs  ipc.rs  memory.rs  mod.rs  net.rs  numbers.rs  process.rs  system.rs  test.rs  time.rs
(+394 files in other folders)
