[package]
name = "forge"
version = "0.1.0"
edition = "2021"
authors = ["Redstone OS Team"]
description = "Forge - The RedstoneOS Microkernel"
license = "MIT"

[[bin]]
name = "forge"
path = "src/main.rs"
test = false
bench = false

[lib]
harness = false
test = false
bench = false

[dependencies]

[features]
default = []

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = 0
debug-assertions = true
overflow-checks = false
incremental = false
