[package]
name = "forge"
version = "0.1.1"
edition = "2021"
authors = ["Redstone OS Team"]
description = "Forge - The RedstoneOS Microkernel"
license = "MIT"

[[bin]]
name = "forge"
path = "src/main.rs"
test = false
bench = false

[lib]
harness = false
test = false
bench = false

# =========================================================
# Apenas dependências internas
# =========================================================
[dependencies]
gfx_types = { path = "../libs/gfx_types" }

[features]
default = []

# =========================================================
# SINGLE PROFILE — KERNEL DEV SAFE
# =========================================================
[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = false


[profile.kernel-release]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = false
incremental = false
